Removed bad event and moved the file back down a level

--- a/.github/workflows/tests/unit-tests.yml
+++ b/.github/workflows/tests/unit-tests.yml
@@ -1,6 +1,6 @@
 name: Run all unit tests
 run-name: Run all unit tests
-on: [ push, manual ]
+on: [ push ]
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
