--- a/.github/workflows/tests/integration-tests.yml
+++ b/.github/workflows/tests/integration-tests.yml
@@ -1,7 +1,7 @@
 name: Run integration tests
 on: [ push , workflow_call ]
 jobs:
-  run-tests:
+  run-integration-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Mock test run
