Fixed wrong path to workflow

--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Run unit tests
         uses: ./tests/unit-tests.yml
       - name: Run integration tests
-        uses: ./integration-tests.yml
+        uses: ./tests/integration-tests.yml
