--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,5 +1,5 @@
 name: Run integration tests
-on: [ push , workflow_call ]
+on: [ workflow_call ]
 jobs:
   run-integration-tests:
     runs-on: ubuntu-latest
