--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,6 +1,6 @@
 name: Run all unit tests
 run-name: Run all unit tests
-on: [ push, workflow_call ]
+on: [ workflow_call ]
 jobs:
   unit-test:
     runs-on: ubuntu-latest
