--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,7 +14,7 @@ jobs:
           architecture: x64
           cache: maven
       - name: Build code
-        run: mvn clean install -DskipTests=true
+        run: mvn clean -e install -DskipTests=true
       - name: Run tests
         run: mvn test surefire-report:report-only
       - name: Archive test report
