--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -3,6 +3,6 @@ on: [ push ]
 jobs:
   run-unit-tests:
     uses: ./.github/workflows/unit-tests.yml
-  run-integration-tests:
-    uses: ./.github/workflows/integration-tests.yml
+#  run-integration-tests:
+#    uses: ./.github/workflows/integration-tests.yml
 
