Try to fix exception

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Run tests
         run: mvn -e test
       - name: Create report
-        run:
-          - mvn -e surefire-report:report
-          - ls -lhat
+        run: mvn -e surefire-report:report
+      #  try anonymous run
+      - run: ls -lhat
       - name: Archive test report
         if: always()
         uses: actions/upload-artifact@v3
