--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -3,15 +3,14 @@ on:
   workflow_dispatch:
     branches:
       - '*'
-  push:
-    branches:
-      - master
   pull_request:
     branches:
       - '*'
 jobs:
   run-unit-tests:
     uses: ./.github/workflows/unit-tests.yml
+  publish-after:
+    uses: ./.github/workflows/publish.yml
 #  run-integration-tests:
 #    uses: ./.github/workflows/integration-tests.yml
 
