--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,5 @@
 name: Publish artifacts
-on:
-  workflow_run:
-    #    Does this really take into account all the workflows? Doc suggests only one must succeed
-    workflows: [ "Run all tests" ]
-    branches:
-      - '*'
-    types:
-      - completed
+on: [ workflow_call ]
 
 jobs:
   publish-artifacts-after-tests:
