--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches:
       - '*'
+  workflow_call:
+
 jobs:
   run-unit-tests:
     uses: ./.github/workflows/unit-tests.yml
